--- a/css-main.css
+++ b/css-main.css
@@ -77,6 +77,7 @@ header {
   width: 100%;
   height: 6.5rem;
   margin-bottom: 0.3rem;
+  padding-left: 0.35rem;
   border: 2px solid #f5bc2c;
   border-radius: 4px;
   overflow: hidden;
